# C_Study

./: .cproject  .project  CMakeLists.txt  Makefile  Makefile_example  NOTE.md  README.md  bool.h  data_type_scope.c  display.c  display2.c  escape.c  file_eof.c  flags.c  floatcnv.c  floats.c  get_char.c  golf.c  hello_world.c  input.c  intconv.c  longstrg.c  main.c  post_pre.c  praisel.c  prntval.c  scanf.c  shoes1.c  shoes2.c  skiptwo.c  sort.c  squares.c  stringf.c  sweetie.c  talkback.c  type_size.c  variable.c  varwid.c  width.c
exercise/: altnames.c  bases.c  boolean.c  calculate_distance.c  calculate_strlen.c  charcode.c  convert_day.c  cypher2.c  divide.c  do_while.c  doub_flot_diff.c  entry.c  escape.c  fathm_ft.c  floatcnv.c  for_13s.c  for_down.c  func.c  golf.c  greater_ten.c  hello.c  intconv.c  longstrg.c  parctice_printf.c  plaitnum.c  pound.c  praise.c  print_dspeed.c  print_flt.c  print_name.c  print_unsigned.c  prntval.c  row2.c  rows1.c  running.c  sorted.c  squares.c  summing.c  talkback.c  toobig.c  (+3 more)
include/: altnames.h  bases.h  bool.h  boolean.h  calculate_distance.h  calculate_strlen.h  charcode.h  cmpflt.h  colddays.h  conv_age_to_sec.h  conv_inch_to_centimeter.h  conv_quart_to_molecule.h  convert_day.h  convert_temperature.h  convert_time.h  cypher1.h  cypher2.h  defines.h  divide.h  do_while.h  doub_flot_diff.h  electric.h  entry.h  entry_info.h  escape.h  fathm_ft.h  flags.h  floatcnv.h  floaterr.h  floats.h  for_13s.h  for_char.h  for_cube.h  for_down.h  for_loop.h  func.h  golf.h  greater_ten.h  hello.h  input.h  (+43 more)
src/: basic.c  cmpflt.c  (+44 more)
